# hunter

./: .travis.yml  README.rst
cmake/configs/: default.cmake
cmake/projects/CURL/: hunter.cmake
cmake/projects/Eigen/: hunter.cmake
cmake/projects/OpenBLAS/: hunter.cmake
cmake/projects/OpenBLAS/schemes/: OpenBLAS.cmake.in
cmake/projects/OpenCV/: hunter.cmake
cmake/projects/OpenCV-Extra/: hunter.cmake
cmake/projects/OpenSSL/schemes/: url_sha1_openssl.cmake.in
cmake/projects/RapidJSON/: hunter.cmake
cmake/projects/Tesseract/: hunter.cmake
cmake/projects/dlib/: hunter.cmake
cmake/projects/libfreenect/: hunter.cmake
cmake/projects/libxml2/: hunter.cmake
cmake/projects/libxml2/schemes/: url_sha1_libxml2_msvc.cmake.in
cmake/projects/pytorch/: hunter.cmake
examples/Sqlpp11/: CMakeLists.txt
examples/cpuinfo/: CMakeLists.txt
examples/libfreenect/: CMakeLists.txt  example.cpp
examples/pytorch/: CMakeLists.txt  main.cpp
